update the text content

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <Link aria-label="link" rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>IJIRE</title>
+    <title>INDJCST</title>
     <!-- <script async src="https://badge.dimensions.ai/badge.js" charset="utf-8"></script> -->
     <script type="text/javascript" src="//cdn.plu.mx/widget-popup.js"></script>
 
@@ -13,7 +13,7 @@
     {
       "@context": "https://schema.org",
       "@type": "WebSite",
-      "name": "International Journal of Innovative Research in Engineering",
+      "name": "The Indian Journal of Computer Science and Technology",
       "url": "https://www.theijire.com",
       "potentialAction": {
         "@type": "SearchAction",
@@ -28,16 +28,16 @@
     {
       "@context": "https://schema.org",
       "@type": "Organization",
-      "name": "International Journal of Innovative Research in Engineering (IJIRE)",
-      "alternateName": "IJIRE",
+      "name": "The Indian Journal of Computer Science and Technology (INDJCST)",
+      "alternateName": "INDJCST",
       "url": "https://www.theijire.com",
       "logo": "https://www.theijire.com/public/logo.webp",
       "email": "editorinchief@theijire.com",
       "telephone": "+91 9840521421",
-      "description": "IJIRE is an international, peer-reviewed, open-access journal publishing multidisciplinary research in science, engineering, and technology.",
+      "description": "INDJCST is an international, peer-reviewed, open-access journal publishing multidisciplinary research in science, engineering, and technology.",
       "sameAs": [
-        "https://www.facebook.com/IJIRE",
-        "https://www.linkedin.com/company/IJIRE",
+        "https://www.facebook.com/INDJCST",
+        "https://www.linkedin.com/company/INDJCST",
         "https://twitter.com/"
       ],
       "address": {
@@ -65,15 +65,15 @@
     {
       "@context": "https://schema.org",
       "@type": "Periodical",
-      "name": "International Journal of Innovative Research in Engineering",
-      "issn": "2582-8746",
+      "name": "The Indian Journal of Computer Science and Technology",
+      "issn": "2583-5300",
       "publisher": {
         "@type": "Organization",
-        "name": "IJIRE"
+        "name": "INDJCST"
       },
       "url": "https://www.theijire.com",
       "startDate": "2020",
-      "description": "IJIRE is a bi-monthly, open-access, peer-reviewed journal for publishing research in science, engineering, technology, and multidisciplinary fields.",
+      "description": "INDJCST is a bi-monthly, open-access, peer-reviewed journal for publishing research in science, engineering, technology, and multidisciplinary fields.",
       "inLanguage": "en",
       "isAccessibleForFree": true
     }
@@ -84,12 +84,12 @@
     {
       "@context": "https://schema.org",
       "@type": "WebPage",
-      "name": "IJIRE - International Journal of Innovative Research in Engineering",
+      "name": "INDJCST - The Indian Journal of Computer Science and Technology",
       "url": "https://www.theijire.com",
-      "description": "IJIRE is an international, scholarly, open-access, peer-reviewed journal that publishes innovative and original research across science, engineering, and technology. Call for Papers – Volume 5, Issue 5 (2025) is now open.",
+      "description": "INDJCST is an international, scholarly, open-access, peer-reviewed journal that publishes innovative and original research across science, engineering, and technology. Call for Papers – Volume 5, Issue 5 (2025) is now open.",
       "publisher": {
         "@type": "Organization",
-        "name": "IJIRE"
+        "name": "INDJCST"
       },
       "about": {
         "@type": "Thing",
@@ -104,18 +104,18 @@
       "@context": "https://schema.org",
       "@type": "ScholarlyArticle",
       "headline": "Call for Papers – Volume 5, Issue 5 (2025)",
-      "name": "IJIRE Call for Papers – Volume 5, Issue 5 (2025)",
+      "name": "INDJCST Call for Papers – Volume 5, Issue 5 (2025)",
       "author": {
         "@type": "Organization",
-        "name": "International Journal of Innovative Research in Engineering"
+        "name": "The Indian Journal of Computer Science and Technology"
       },
       "datePublished": "2025-08-01",
       "publisher": {
         "@type": "Organization",
-        "name": "IJIRE"
+        "name": "INDJCST"
       },
       "url": "https://www.theijire.com/call-for-papers",
-      "description": "Submit your original and high-quality research paper to Volume 5, Issue 5 (2025). IJIRE is an international, open-access, peer-reviewed journal."
+      "description": "Submit your original and high-quality research paper to Volume 5, Issue 5 (2025). INDJCST is an international, open-access, peer-reviewed journal."
     }
     </script>
   </head>
