update the globle linkes and email

--- a/index.html
+++ b/index.html
@@ -14,10 +14,10 @@
       "@context": "https://schema.org",
       "@type": "WebSite",
       "name": "The Indian Journal of Computer Science and Technology",
-      "url": "https://www.theijire.com",
+      "url": "https://www.indjcst.com",
       "potentialAction": {
         "@type": "SearchAction",
-        "target": "https://www.theijire.com/search?q={search_term_string}",
+        "target": "https://www.indjcst.com/search?q={search_term_string}",
         "query-input": "required name=search_term_string"
       }
     }
@@ -30,9 +30,9 @@
       "@type": "Organization",
       "name": "The Indian Journal of Computer Science and Technology (INDJCST)",
       "alternateName": "INDJCST",
-      "url": "https://www.theijire.com",
-      "logo": "https://www.theijire.com/public/logo.webp",
-      "email": "editorinchief@theijire.com",
+      "url": "https://www.indjcst.com",
+      "logo": "https://www.indjcst.com/public/logo.webp",
+      "email": "editorinchief@indjcst.com",
       "telephone": "+91 9840521421",
       "description": "INDJCST is an international, peer-reviewed, open-access journal publishing multidisciplinary research in science, engineering, and technology.",
       "sameAs": [
@@ -71,7 +71,7 @@
         "@type": "Organization",
         "name": "INDJCST"
       },
-      "url": "https://www.theijire.com",
+      "url": "https://www.indjcst.com",
       "startDate": "2020",
       "description": "INDJCST is a bi-monthly, open-access, peer-reviewed journal for publishing research in science, engineering, technology, and multidisciplinary fields.",
       "inLanguage": "en",
@@ -85,7 +85,7 @@
       "@context": "https://schema.org",
       "@type": "WebPage",
       "name": "INDJCST - The Indian Journal of Computer Science and Technology",
-      "url": "https://www.theijire.com",
+      "url": "https://www.indjcst.com",
       "description": "INDJCST is an international, scholarly, open-access, peer-reviewed journal that publishes innovative and original research across science, engineering, and technology. Call for Papers – Volume 5, Issue 5 (2025) is now open.",
       "publisher": {
         "@type": "Organization",
@@ -114,7 +114,7 @@
         "@type": "Organization",
         "name": "INDJCST"
       },
-      "url": "https://www.theijire.com/call-for-papers",
+      "url": "https://www.indjcst.com/call-for-papers",
       "description": "Submit your original and high-quality research paper to Volume 5, Issue 5 (2025). INDJCST is an international, open-access, peer-reviewed journal."
     }
     </script>
